ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.org/websocket-services: room-signalr-service
  #   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  # ingressClassName: nginx-example
  rules:
  # - host: "127.0.0.1"
  - http:
      paths:
      - path: /
        # Exact: 完全匹配。Prefix: 前缀匹配。ImplementationSpecific: 由控制器决定(默认)。
        pathType: Prefix
        backend:
          service:
            name: api-service
            port:
              number: 80
      - path: /hub
        # Exact: 完全匹配。Prefix: 前缀匹配。ImplementationSpecific: 由控制器决定(默认)。
        pathType: Prefix
        backend:
          service:
            name: room-signalr-service
            port:
              number: 5001
